Adicionando header com bootstrap e jquery

--- a/articles.html
+++ b/articles.html
@@ -19,6 +19,10 @@
             <div id="header"></div>
         </div>
 
+        <script>
+            console.log(document.URL);
+            console.log(window.location.href.includes(''));
+        </script>
         <script src="./js/index.js"></script>
     </body>
 </html>
