--- a/articles.html
+++ b/articles.html
@@ -7,7 +7,7 @@
             content="width=device-width, initial-scale=1.0"
         />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <title>Sobre Matheus Mello</title>
+        <title>Artigos de Matheus Mello</title>
         <link
             rel="stylesheet"
             href="https://bootswatch.com/4/simplex/bootstrap.min.css"
@@ -19,10 +19,6 @@
             <div id="header"></div>
         </div>
 
-        <script>
-            console.log(document.URL);
-            console.log(window.location.href.includes(''));
-        </script>
         <script src="./js/index.js"></script>
     </body>
 </html>
