--- a/about.html
+++ b/about.html
@@ -8,11 +8,16 @@
         />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <title>Sobre Matheus Mello</title>
-        <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+        <link
+            rel="shortcut icon"
+            href="./assets/favicon.png"
+            type="image/x-icon"
+        />
         <link
             rel="stylesheet"
             href="https://bootswatch.com/4/simplex/bootstrap.min.css"
         />
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     </head>
     <body>
         <div class="container">
