--- a/articles.html
+++ b/articles.html
@@ -9,6 +9,11 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <title>Artigos de Matheus Mello</title>
         <link
+            rel="shortcut icon"
+            href="./assets/favicon.png"
+            type="image/x-icon"
+        />
+        <link
             rel="stylesheet"
             href="https://bootswatch.com/4/simplex/bootstrap.min.css"
         />
