Add img e primeiro artigo mudanca de css

--- a/articles.html
+++ b/articles.html
@@ -15,15 +15,46 @@
         />
         <link
             rel="stylesheet"
-            href="https://bootswatch.com/4/simplex/bootstrap.min.css"
+            href="https://bootswatch.com/4/flatly/bootstrap.min.css"
         />
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     </head>
     <body>
-        <div class="container">
-            <div id="header"></div>
-        </div>
+        <div id="header"></div>
 
+        <div id="artigos">
+            <div class="jumbotron jumbotron-fluid container-fluid">
+                <div class="container">
+                    <h1 class="display-4">
+                        A importância do HATEOAS em APIs Restful
+                    </h1>
+                    <p class="lead">
+                        HATEOAS ou Hypermedia As the Engine Of Application
+                        State é um modelo simples e elegante com que uma
+                        API REST pode ser desenhada para que a mesma
+                        permita que aplicações que a consumam navegue entre
+                        seus recursos através de links e URLs sem a
+                        necessidade de conhecimento denso prévio sobre a
+                        API. Desta forma, ao consumir uma API REST que
+                        segue o padrão HATEOAS...
+                    </p>
+                    <hr class="my-4" />
+                    <p>
+                        Saiba o que é e como utilizar este importante
+                        padrão de arquitetura de APIs REST que facilita a
+                        representação dos estados da aplicação e previne o
+                        chamado "hardcoding".
+                    </p>
+                    <a
+                        class="btn btn-primary btn-lg"
+                        href="https://www.linkedin.com/pulse/import%C3%A2ncia-do-hateoas-em-apis-restful-matheus-mello-de-lima/"
+                        role="button"
+                        target="_blank"
+                        >Saiba mais</a
+                    >
+                </div>
+            </div>
+        </div>
         <script src="./js/index.js"></script>
     </body>
 </html>
