--- a/index.html
+++ b/index.html
@@ -15,15 +15,12 @@
         />
         <link
             rel="stylesheet"
-            href="https://bootswatch.com/4/simplex/bootstrap.min.css"
+            href="https://bootswatch.com/4/flatly/bootstrap.min.css"
         />
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     </head>
     <body>
-        <div class="container">
-            <div id="header"></div>
-        </div>
-
+        <div id="header"></div>
         <script src="./js/index.js"></script>
     </body>
 </html>
