--- a/articles.html
+++ b/articles.html
@@ -47,11 +47,27 @@
                     </p>
                     <a
                         class="btn btn-primary btn-lg"
-                        href="https://www.linkedin.com/pulse/import%C3%A2ncia-do-hateoas-em-apis-restful-matheus-mello-de-lima/"
+                        href="https://medium.com/@mellomatheuslima/a-import%C3%A2ncia-do-hateoas-em-apis-restful-1ca2dc081288"
                         role="button"
                         target="_blank"
                         >Saiba mais</a
                     >
+                    <div class="float-right">
+                        <a
+                            class="btn btn-secondary btn-lg"
+                            href="https://gist.github.com/mellomaths/a27655c3dcae033a5d46b5a2deb8848d"
+                            role="button"
+                            target="_blank"
+                            >Leia no GitHub Gist</a
+                        >
+                        <a
+                            class="btn btn-secondary btn-lg"
+                            href="https://www.linkedin.com/pulse/import%C3%A2ncia-do-hateoas-em-apis-restful-matheus-mello-de-lima/"
+                            role="button"
+                            target="_blank"
+                            >Leia no LinkedIn</a
+                        >
+                    </div>
                 </div>
             </div>
         </div>
