removendo aba de about adicionando texto no index e icones

--- a/index.html
+++ b/index.html
@@ -17,10 +17,204 @@
             rel="stylesheet"
             href="https://bootswatch.com/4/flatly/bootstrap.min.css"
         />
+        <link
+            rel="stylesheet"
+            href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+            integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+            crossorigin="anonymous"
+        />
+        <link rel="stylesheet" href="./css/icon.css" />
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     </head>
     <body>
         <div id="header"></div>
+
+        <div id="about">
+            <div class="jumbotron jumbotron-fluid container-fluid">
+                <div class="container">
+                    <h1 class="display-4">
+                        Matheus Mello de Lima |
+                        <a
+                            class="btn btn-primary btn-lg"
+                            href="https://www.linkedin.com/in/matheus-mello-de-lima-a50415111/"
+                            role="button"
+                            target="_blank"
+                        >
+                            <i class="fab fa-linkedin-in"></i>
+                        </a>
+                        <a
+                            class="btn btn-primary btn-lg"
+                            href="https://github.com/mellomaths"
+                            role="button"
+                            target="_blank"
+                        >
+                            <i class="fab fa-github"></i>
+                        </a>
+                        <a
+                            tabindex="0"
+                            class="btn btn-lg btn-primary"
+                            role="button"
+                            href="#"
+                            onclick="return false;"
+                            data-toggle="popover"
+                            data-trigger="focus"
+                            data-content="mellomatheuslima@gmail.com"
+                            ><i class="far fa-envelope"></i
+                        ></a>
+                        <a
+                            tabindex="0"
+                            class="btn btn-lg btn-primary"
+                            role="button"
+                            href="#"
+                            onclick="return false;"
+                            data-toggle="popover"
+                            data-trigger="focus"
+                            data-content="+55 21 99692-3101"
+                            ><i class="fas fa-mobile-alt"></i
+                        ></a>
+                    </h1>
+                    <p class="lead">
+                        Sou estudante do 6º período de Ciência da
+                        Computação pela Univerdade do Estado do Rio de
+                        Janeiro - UERJ e integrante de uma equipe de
+                        desenvolvimento Agile como Analista de Sistemas
+                        Júnior na IBM Brasil, trabalhando com sistemas de
+                        <a
+                            href="https://www.handshake.com/blog/what-is-order-management-2"
+                            class="text-primary"
+                            >Order Management</a
+                        >
+                        voltado para o mercado de Telecomunicações. Além
+                        disso, tenho como desafio pessoal, facilitar e
+                        agilizar processos internos da equipe,
+                        automatizando-os, através de ferramentas
+                        desenvolvidas em Node.js ou Python.
+                    </p>
+                    <p class="lead">
+                        Possuo interesse em Desenvolvimento Web, Mobile e
+                        em Data Visualization e Data Science.
+                    </p>
+                    <p class="lead">
+                        Ferramentas e tecnologias com que trabalho:
+                    </p>
+                    <div class="list-group">
+                        <a
+                            href="https://developer.mozilla.org/pt-BR/docs/Aprender/JavaScript"
+                            target="_blank"
+                            class="list-group-item list-group-item-action"
+                        >
+                            JavaScript
+                        </a>
+                        <a
+                            href="https://www.ericsson.com/en/press-releases/2012/9/ericsson-acquires-canadian-ossbss-company-conceptwave"
+                            target="_blank"
+                            class="list-group-item list-group-item-action"
+                        >
+                            Ericsson's Concept Wave
+                        </a>
+                        <a
+                            href="https://www.soapui.org/"
+                            target="_blank"
+                            class="list-group-item list-group-item-action"
+                            >Soap UI</a
+                        >
+                        <a
+                            href="https://www.oracle.com/br/database/"
+                            target="_blank"
+                            class="list-group-item list-group-item-action"
+                            >Banco de Dados Oracle</a
+                        >
+                        <a
+                            href="https://www.ibm.com/support/knowledgecenter/en/SSGMCP_5.3.0/com.ibm.cics.ts.webservices.doc/concepts/dfhws_definition.html"
+                            target="_blank"
+                            class="list-group-item list-group-item-action"
+                            >Web Services</a
+                        >
+                        <a
+                            href="https://git-scm.com/"
+                            target="_blank"
+                            class="list-group-item list-group-item-action"
+                            >Git e GitHub Enterprise</a
+                        >
+                        <a
+                            href="https://www.zenhub.com/"
+                            target="_blank"
+                            class="list-group-item list-group-item-action"
+                            >Zenhub</a
+                        >
+                    </div>
+                    <hr class="my-4" />
+                    <h2 class="">Experiência</h2>
+                    <hr class="my-4" />
+                    <h2 class="">Competências</h2>
+                    <hr class="my-4" />
+                    <h2 class="">Projetos</h2>
+                    <div class="card-columns mt-4">
+                        <div class="card" style="width: 18rem;">
+                            <img
+                                src="https://discordapp.com/assets/fc0b01fe10a0b8c602fb0106d8189d9b.png"
+                                class="card-img-top"
+                                alt="..."
+                            />
+                            <div class="card-body">
+                                <h5 class="card-title">Discord Bot</h5>
+                                <p class="card-text">
+                                    Bot para o aplicativo de comunicação
+                                    Discord que realiza funções
+                                    administrativas no servidor.
+                                </p>
+                                <p class="card-text">
+                                    <small class="text-muted"
+                                        >Em andamento</small
+                                    >
+                                </p>
+                                <div>
+                                    <div
+                                        class="d-inline-flex bd-highlight mb-4"
+                                    >
+                                        <i class="fab fa-js fa-2x p-2"></i>
+                                        <i
+                                            class="fab fa-node fa-2x p-2"
+                                        ></i>
+                                        <i
+                                            class="fas fa-database fa-2x p-2"
+                                        ></i>
+
+                                        <div class="image-w bitmap-logo">
+                                            <img
+                                                src="./assets/icons/heroku.png"
+                                                alt=""
+                                            />
+                                        </div>
+                                        <div class="image-w bitmap-logo">
+                                            <img
+                                                src="./assets/icons/mongodb.png"
+                                                alt=""
+                                            />
+                                        </div>
+                                    </div>
+                                </div>
+                                <a
+                                    href="https://github.com/mellomaths/magibot"
+                                    target="_blank"
+                                    class="btn btn-primary"
+                                    >Repositório</a
+                                >
+                            </div>
+                        </div>
+                    </div>
+                    <hr class="my-4" />
+                </div>
+            </div>
+        </div>
+
         <script src="./js/index.js"></script>
+        <script>
+            function handleEmailClick(e) {
+                setTimeout(() => {}, 3000);
+            }
+        </script>
     </body>
 </html>
