--- a/articles.html
+++ b/articles.html
@@ -17,6 +17,12 @@
             rel="stylesheet"
             href="https://bootswatch.com/4/flatly/bootstrap.min.css"
         />
+        <link
+            rel="stylesheet"
+            href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+            integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+            crossorigin="anonymous"
+        />
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     </head>
     <body>
