--- a/index.html
+++ b/index.html
@@ -170,32 +170,28 @@
                                         >Em andamento</small
                                     >
                                 </p>
-                                <div>
-                                    <div
-                                        class="d-inline-flex bd-highlight mb-4"
-                                    >
-                                        <i class="fab fa-js fa-2x p-2"></i>
-                                        <i
-                                            class="fab fa-node fa-2x p-2"
-                                        ></i>
-                                        <i
-                                            class="fas fa-database fa-2x p-2"
-                                        ></i>
 
-                                        <div class="image-w bitmap-logo">
-                                            <img
-                                                src="./assets/icons/heroku.png"
-                                                alt=""
-                                            />
-                                        </div>
-                                        <div class="image-w bitmap-logo">
-                                            <img
-                                                src="./assets/icons/mongodb.png"
-                                                alt=""
-                                            />
-                                        </div>
+                                <div
+                                    class="d-inline-flex bd-highlight mb-4"
+                                >
+                                    <i class="fab fa-js fa-2x p-2"></i>
+                                    <i class="fab fa-node fa-2x p-2"></i>
+                                    <i class="fab fa-github fa-2x p-2"></i>
+
+                                    <div class="image-w bitmap-logo">
+                                        <img
+                                            src="./assets/icons/heroku.png"
+                                            alt=""
+                                        />
+                                    </div>
+                                    <div class="image-w bitmap-logo">
+                                        <img
+                                            src="./assets/icons/mongodb.png"
+                                            alt=""
+                                        />
                                     </div>
                                 </div>
+
                                 <a
                                     href="https://github.com/mellomaths/magibot"
                                     target="_blank"
