--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             href="#"
                             onclick="return false;"
                             data-toggle="popover"
-                            data-trigger="focus"
+                            data-trigger="hover"
                             data-content="mellomatheuslima@gmail.com"
                             ><i class="far fa-envelope"></i
                         ></a>
@@ -70,9 +70,20 @@
                             href="#"
                             onclick="return false;"
                             data-toggle="popover"
-                            data-trigger="focus"
+                            data-trigger="hover"
                             data-content="+55 21 99692-3101"
                             ><i class="fas fa-mobile-alt"></i
+                        ></a>
+                        <a
+                            tabindex="0"
+                            class="btn btn-lg btn-primary"
+                            role="button"
+                            href="#"
+                            onclick="return false;"
+                            data-toggle="popover"
+                            data-trigger="hover"
+                            data-content="mellomatheuslima"
+                            ><i class="fab fa-skype"></i
                         ></a>
                     </h1>
                     <p class="lead">
