--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <body data-spy="scroll" data-target=".navbar" data-offset="50">
         <section id="header">
             <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
-                <a class="navbar-brand nav-scroll-item" href="#" data-page="header">Matheus Mello de Lima</a>
+                <a class="navbar-brand nav-scroll-item " href="#" data-page="header">Matheus Mello de Lima</a>
                 <button
                     class="navbar-toggler"
                     type="button"
@@ -57,6 +57,11 @@
                     <div class="socials">
                         <div class="my-2 my-lg-0">
                             <ul class="navbar-nav mr-auto">
+                                <li class="nav-item">
+                                    <a class="nav-link nav-scroll-item" href="#" data-page="about"
+                                        >Disponível para Freelancer</a
+                                    >
+                                </li>
                                 <li class="nav-item">
                                     <a
                                         class="nav-link"
@@ -356,10 +361,6 @@
             $('[data-toggle="popover"]').popover();
             $('.nav-scroll-item').click(function() {
                 var pageId = $(this).attr('data-page');
-                $(this)
-                    .parent()
-                    .addClass('active');
-                $(this).append('<span class="sr-only">(current)</span>');
                 $('html, body').animate({ scrollTop: $('#' + pageId).offset().top }, 1000);
             });
         </script>
