--- a/index.html
+++ b/index.html
@@ -223,9 +223,9 @@
                                 <div class="main-timeline">
                                     <div class="timeline">
                                         <div class="timeline-icon"><i class="fa fa-globe"></i></div>
-                                        <span class="year">Jun 2018</span>
+                                        <span class="year">06/2018</span>
                                         <div class="timeline-content">
-                                            <h5 class="title">Analista de Sistemas Júnior</h5>
+                                            <h5 class="title">Analista de Sistemas Júnior - IBM</h5>
                                             <p class="description">
                                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum
                                                 mattis felis vitae risus pulvinar tincidunt. Nam ac venenatis enim.
@@ -235,9 +235,9 @@
                                     </div>
                                     <div class="timeline">
                                         <div class="timeline-icon"><i class="fa fa-briefcase"></i></div>
-                                        <span class="year">Fev 2018</span>
+                                        <span class="year">02/2018</span>
                                         <div class="timeline-content">
-                                            <h5 class="title">Estágio em Desenvolvimento de Software</h5>
+                                            <h5 class="title">Estágio em Desenvolvimento de Software - IBM</h5>
                                             <p class="description">
                                                 Iniciado no programa BTP de estágio na IBM. Posteriormente
                                                 efetivado para o cargo de IBM IT Specialist.
@@ -246,9 +246,9 @@
                                     </div>
                                     <div class="timeline">
                                         <div class="timeline-icon"><i class="fa fa-rocket"></i></div>
-                                        <span class="year">Fev 2016</span>
+                                        <span class="year">02/2016</span>
                                         <div class="timeline-content">
-                                            <h5 class="title">Ciência da Computação - UERJ</h5>
+                                            <h5 class="title">Bacharel em Ciência da Computação - UERJ</h5>
                                             <p class="description"></p>
                                         </div>
                                     </div>
