Utilizando icones customizados

--- a/index.html
+++ b/index.html
@@ -596,13 +596,33 @@
                                 <div
                                     class="d-inline-flex bd-highlight mb-4"
                                 >
-                                    <i class="fab fa-js fa-2x p-2"></i>
-                                    <i class="fab fa-node fa-2x p-2"></i>
-                                    <i class="fab fa-github fa-2x p-2"></i>
+                                    <div class="image-w bitmap-logo">
+                                        <img
+                                            src="./assets/icons/javascript.png"
+                                            alt=""
+                                            srcset=""
+                                        />
+                                    </div>
 
                                     <div class="image-w bitmap-logo">
                                         <img
-                                            src="./assets/icons/heroku.png"
+                                            src="./assets/icons/nodejs.png"
+                                            alt=""
+                                            srcset=""
+                                        />
+                                    </div>
+
+                                    <div class="image-w bitmap-logo">
+                                        <img
+                                            src="./assets/icons/github.png"
+                                            alt=""
+                                            srcset=""
+                                        />
+                                    </div>
+
+                                    <div class="image-w bitmap-logo">
+                                        <img
+                                            src="./assets/icons/heroku-logo.png"
                                             alt=""
                                         />
                                     </div>
