Inserindo novo projeto

--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
                             style="width: 18rem;"
                         >
                             <img
-                                src="https://discordapp.com/assets/fc0b01fe10a0b8c602fb0106d8189d9b.png"
+                                src="./assets/icons/discord.png"
                                 class="card-img-top"
                                 alt="..."
                             />
@@ -603,7 +603,6 @@
                                             srcset=""
                                         />
                                     </div>
-
                                     <div class="image-w bitmap-logo">
                                         <img
                                             src="./assets/icons/nodejs.png"
@@ -611,7 +610,6 @@
                                             srcset=""
                                         />
                                     </div>
-
                                     <div class="image-w bitmap-logo">
                                         <img
                                             src="./assets/icons/github.png"
@@ -619,7 +617,6 @@
                                             srcset=""
                                         />
                                     </div>
-
                                     <div class="image-w bitmap-logo">
                                         <img
                                             src="./assets/icons/heroku-logo.png"
@@ -639,6 +636,68 @@
                                     target="_blank"
                                     class="btn btn-primary"
                                     >Repositório</a
+                                >
+                            </div>
+                        </div>
+                        <div
+                            class="card hover-effect"
+                            style="width: 18rem;"
+                        >
+                            <img
+                                src="./assets/icons/slack.png"
+                                class="card-img-top"
+                                alt="..."
+                            />
+                            <div class="card-body">
+                                <h5 class="card-title">Slack Bot</h5>
+                                <p class="card-text">
+                                    Bot para obter dados de tempo de
+                                    análise de defeitos encontrados em
+                                    ambientes de Teste Integrado.
+                                </p>
+                                <p class="card-text">
+                                    <small class="text-muted"
+                                        >Em andamento</small
+                                    >
+                                </p>
+
+                                <div
+                                    class="d-inline-flex bd-highlight mb-4"
+                                >
+                                    <div class="image-w bitmap-logo mx-2">
+                                        <img
+                                            src="./assets/icons/typescript.svg"
+                                            alt=""
+                                            srcset=""
+                                        />
+                                    </div>
+                                    <div class="image-w bitmap-logo">
+                                        <img
+                                            src="./assets/icons/nodejs.png"
+                                            alt=""
+                                            srcset=""
+                                        />
+                                    </div>
+                                    <div class="image-w bitmap-logo">
+                                        <img
+                                            src="./assets/icons/github.png"
+                                            alt=""
+                                            srcset=""
+                                        />
+                                    </div>
+                                    <div class="image-w bitmap-logo">
+                                        <img
+                                            src="./assets/icons/oracledb.png"
+                                            alt=""
+                                        />
+                                    </div>
+                                </div>
+
+                                <a
+                                    href="https://github.com/mellomaths/magibot"
+                                    target="_blank"
+                                    class="btn btn-primary disabled"
+                                    >Repositório Privado</a
                                 >
                             </div>
                         </div>
