--- a/index.html
+++ b/index.html
@@ -694,7 +694,7 @@
                                 </div>
 
                                 <a
-                                    href="https://github.com/mellomaths/magibot"
+                                    href="_"
                                     target="_blank"
                                     class="btn btn-primary disabled"
                                     >Repositório Privado</a
