Atualizando o status do projeto do slack

--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
                                 </p>
                                 <p class="card-text">
                                     <small class="text-muted"
-                                        >Em andamento</small
+                                        >Finalizado</small
                                     >
                                 </p>
 
